add navbar with dropdown menu

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>VA Masjid</title>
 </head>
-<body>
-  
-</body>
+        <body>
+                <header>
+                        <nav>
+                                <a href="#">Home</a>
+                                <a href="#">About</a>
+                                <a href="#">Events</a>
+                                <div>
+                                        <button>
+                                        <i></i>
+                                        </button>
+                                        <div>
+                                                <a href="#">Weekend School</a>
+                                        </div>
+                                </div>
+                                <div>
+                                        <button>
+                                        <i></i>
+                                        </button>
+                                        <div>
+                                                <a href="#">Islamic Information</a>
+                                        </div>
+                                </div>
+                                <a href="#">Contact</a>
+                        </nav>
+                        </header>
+        </body>
 </html>
