--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
                                 <a href="#">Contact</a>
                         </nav>
                         </header>
+                        <main>
+                                <img src="masjid.jpg" alt="a picture of a masjid in the middle of a city" width="100%" height="100%">
+                                <h1>Biright path for other, it will brighten your path also.</h1>
+                                <button>Donate</button>
+                        </main>
         </body>
 </html>
